--- a/svelte-app/package.json
+++ b/svelte-app/package.json
@@ -11,7 +11,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "wasm": "wasm-pack build ./wasm-dfsolver --target web"
   },
   "devDependencies": {
     "@playwright/test": "^1.21.0",
@@ -29,7 +30,10 @@
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
     "tslib": "^2.3.1",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "vite": "^2.7.13",
+    "vite-plugin-rsw": "^1.10.2",
+		"vite-plugin-wasm-pack": "^0.1.12"
   },
   "type": "module",
   "dependencies": {
