--- a/svelte-app/package.json
+++ b/svelte-app/package.json
@@ -28,12 +28,13 @@
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.46.0",
     "svelte-check": "^2.2.6",
+    "svelte-loading-spinners": "^0.1.7",
     "svelte-preprocess": "^4.10.1",
     "tslib": "^2.3.1",
     "typescript": "~4.6.2",
     "vite": "^2.7.13",
     "vite-plugin-rsw": "^1.10.2",
-		"vite-plugin-wasm-pack": "^0.1.12"
+    "vite-plugin-wasm-pack": "^0.1.12"
   },
   "type": "module",
   "dependencies": {
