--- a/svelte-app/package.json
+++ b/svelte-app/package.json
@@ -34,7 +34,8 @@
     "typescript": "~4.6.2",
     "vite": "^2.7.13",
     "vite-plugin-rsw": "^1.10.2",
-    "vite-plugin-wasm-pack": "^0.1.12"
+    "vite-plugin-wasm-pack": "^0.1.12",
+    "d3-interpolate": "latest"
   },
   "type": "module",
   "dependencies": {
