--- a/svelte-app/package.json
+++ b/svelte-app/package.json
@@ -17,10 +17,12 @@
   "devDependencies": {
     "@playwright/test": "^1.21.0",
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.35",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "d3-interpolate": "latest",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -34,8 +36,7 @@
     "typescript": "~4.6.2",
     "vite": "^2.7.13",
     "vite-plugin-rsw": "^1.10.2",
-    "vite-plugin-wasm-pack": "^0.1.12",
-    "d3-interpolate": "latest"
+    "vite-plugin-wasm-pack": "^0.1.12"
   },
   "type": "module",
   "dependencies": {
