Implements first half of about page
This commit implements the first half of the about page, and includes
about this app, representing the problem, the solution space and the
mathematical equations used to calculate the number of permutations and
creates the tables summarising the piece rotations and flips.

--- a/svelte-app/package.json
+++ b/svelte-app/package.json
@@ -36,7 +36,8 @@
     "typescript": "~4.6.2",
     "vite": "^2.7.13",
     "vite-plugin-rsw": "^1.10.2",
-    "vite-plugin-wasm-pack": "^0.1.12"
+    "vite-plugin-wasm-pack": "^0.1.12",
+    "katex": "latest"
   },
   "type": "module",
   "dependencies": {
