--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
-  "rewrites": [{ 
-      "source": "/(.*)",
-      "destination": "/" }]
+  "rewrites": [
+    { 
+      "source": "/about",
+      "destination": "/about.html" },
+      { 
+        "source": "/solver",
+        "destination": "/solver.html" }
+
+    ]
 }
